# demo-argparse-pipeline

./: .gitignore  README.md
pipeline/: Makefile  config.yaml  main.py  pyproject.toml  requirements.txt
pipeline/data/: country_chill.csv  electric_grooves.csv  hiphop_vibes.csv  lofi.csv  rock_relaxation.csv
pipeline/pipeline/: config.py  pipeline.py
