[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["kavisek <kavi.skhon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
pyyaml = "^6.0.1"
numpy = "^1.26.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
